wip: broken: ls(huggingface)

--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using global temporary directory: /tmp/unibox_temp\n",
-      "\u001b[37m2025-02-22 20:22:08 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:38:33 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
      ]
     },
     {
@@ -188,13 +188,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:22:17 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:38:37 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7be3fbe2e614758ad20b3969a3713e1",
+       "model_id": "833e62e919fd4c09a73ca467c9c15126",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bc334dcb8804becb96e80ec39cc362c",
+       "model_id": "50ba611b4e8344aab91c19726725ec91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "840858cb5e2c432e90d55ef3b8a8162d",
+       "model_id": "b0c0decc32a44767a72f9f54e9021207",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,13 +330,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:22:29 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:38:42 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "637b2daf802b4018afc70b70d78f705c",
+       "model_id": "6f16c7b0b2704ab0b4d4f757f6f19014",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15b0bc039b944ef995e07fd9e36dc0d6",
+       "model_id": "6fa1e275fded4a50b4aafeef3049e6a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "221b0722a96c4380861c12914dc35bfb",
+       "model_id": "f0cc7b07ce674056866d4eae392b8386",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8477c8696fd4a22b8cac511cf194712",
+       "model_id": "9c58016abe8a455bb36bc50bedcb596f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,13 +404,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:22:45 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:38:45 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9aa7b023c0b24574b3bc66e6922e588d",
+       "model_id": "bfdaf2ba38464534b46224b908b40354",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,7 +424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e94a0b62a8e84540bcd77df3bd507949",
+       "model_id": "3952b4d612b64a1b8e2499d09098bcf1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b8c3df9aae543e090fe05fde32d05f5",
+       "model_id": "ba1f11a1164448f7bc7628ed44c6fbf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -530,19 +530,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "TODO:\n",
-    "- test kwargs (to_pandas=True) -> huggingface backend only\n",
-    "- saves(): is not saving to huggingface (but local isntead)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -550,7 +537,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:22:58 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:38:55 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
      ]
     },
     {
@@ -655,15 +642,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using global temporary directory: /tmp/unibox_temp\n",
-      "\u001b[37m2025-02-22 20:36:50 [INFO] loads: Loading from hf://datatmp/test_hf_card3/data/train-00000-of-00001.parquet\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:38:57 [INFO] loads: Loading from hf://datatmp/test_hf_card3/data/train-00000-of-00001.parquet\u001b[0m\n"
      ]
     },
     {
@@ -817,7 +803,7 @@
        "[1000 rows x 6 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,11 +817,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-02-22 20:40:27 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas/data/first_3-00000-of-00001.parquet\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>date</th>\n",
+       "      <th>is_student</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Name_0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>168</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2025-02-21 23:42:14.771897</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Name_1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>157</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Name_2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>150</td>\n",
+       "      <td>123</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     name  age  height  weight                       date  is_student\n",
+       "0  Name_0   55     168      52 2025-02-21 23:42:14.771897        True\n",
+       "1  Name_1   53     157      95 2025-02-21 23:42:14.771899        True\n",
+       "2  Name_2   79     150     123 2025-02-21 23:42:14.771899       False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'data/train-00000-of-00001.parquet'"
+    "import unibox as ub\n",
+    "\n",
+    "res = ub.loads(\"hf://datatmp/test_hf_card3_pandas/data/first_3-00000-of-00001.parquet\")\n",
+    "res"
    ]
   }
  ],
