fix: ub.ls(): working on both huggingface model repo and datasets

--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using global temporary directory: /tmp/unibox_temp\n",
-      "\u001b[37m2025-02-22 20:38:33 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:19 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
      ]
     },
     {
@@ -188,13 +188,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:38:37 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:23 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "833e62e919fd4c09a73ca467c9c15126",
+       "model_id": "b44f1f3e36804f2c9a330e83163c4099",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50ba611b4e8344aab91c19726725ec91",
+       "model_id": "cfa3d8eb5ede4cbc9b81e55b13849f69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0c0decc32a44767a72f9f54e9021207",
+       "model_id": "5062b2d814f74b02a65051967d43e63d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,13 +330,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:38:42 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:35 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f16c7b0b2704ab0b4d4f757f6f19014",
+       "model_id": "d2264d1ca4fc409cb750c26584c33297",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fa1e275fded4a50b4aafeef3049e6a4",
+       "model_id": "715c4f49d3974181bae5684e5a8a5d48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0cc7b07ce674056866d4eae392b8386",
+       "model_id": "977f0035af9343898a2acff2586165ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c58016abe8a455bb36bc50bedcb596f",
+       "model_id": "837a24c79af34eb283d72512a5bcf3dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,13 +404,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:38:45 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:41 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfdaf2ba38464534b46224b908b40354",
+       "model_id": "066ca1ba2f3743d794fee9da459f325c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,7 +424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3952b4d612b64a1b8e2499d09098bcf1",
+       "model_id": "238381a2558c4c8f8be87aa7f5785731",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba1f11a1164448f7bc7628ed44c6fbf0",
+       "model_id": "a943bef388bd4192a85bbc422999e924",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,7 +537,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:38:55 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:50 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
      ]
     },
     {
@@ -649,7 +649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:38:57 [INFO] loads: Loading from hf://datatmp/test_hf_card3/data/train-00000-of-00001.parquet\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:53 [INFO] loads: Loading from hf://datatmp/test_hf_card3/data/train-00000-of-00001.parquet\u001b[0m\n"
      ]
     },
     {
@@ -817,14 +817,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:40:27 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas/data/first_3-00000-of-00001.parquet\u001b[0m\n"
+      "\u001b[37m2025-02-22 20:58:55 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas/data/first_3-00000-of-00001.parquet\u001b[0m\n"
      ]
     },
     {
@@ -895,7 +895,7 @@
        "2  Name_2   79     150     123 2025-02-21 23:42:14.771899       False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,6 +905,37 @@
     "\n",
     "res = ub.loads(\"hf://datatmp/test_hf_card3_pandas/data/first_3-00000-of-00001.parquet\")\n",
     "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using global temporary directory: /tmp/unibox_temp\n",
+      "\u001b[37m2025-02-22 21:00:11 [INFO] ls: Listing contents of hf://datatmp/test_hf_card3_pandas/data\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['hf://datatmp/test_hf_card3_pandas/data/first_3-00000-of-00001.parquet',\n",
+       " 'hf://datatmp/test_hf_card3_pandas/data/train-00000-of-00001.parquet']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import unibox as ub\n",
+    "\n",
+    "ub.ls(\"hf://datatmp/test_hf_card3_pandas/data\")"
    ]
   }
  ],
