fix: local or s3 backends: prevent overwriting important system files

--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -530,14 +530,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:58:50 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
+      "Using global temporary directory: /tmp/unibox_temp\n",
+      "\u001b[37m2025-02-22 21:34:22 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
      ]
     },
     {
@@ -628,7 +629,7 @@
        " 'a photo of a booth of anime goods']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
