fix: openai generation broken

--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -938,6 +938,34 @@
     "\n",
     "ub.ls(\"hf://datatmp/test_hf_card3_pandas/data\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Graduate salaries reflect education quality; study predicts 2024 salaries using regression and neural networks.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from unibox.utils.llm_api import generate_openai\n",
+    "\n",
+    "\n",
+    "\n",
+    "long_text = \"\"\"\n",
+    "The salary level attained by graduates in employment is a reflection of the quality effect of various disciplines and majors in Universities, after having set distinct training objectives, which is a fundamental signifier of higher education. The starting salary level of graduates is a sensitive and complex issue that has recently sparked heated discussions in various media. This article aims to analyze and forecasts the average starting salary of college graduates across the country through regression neural network analysis on college graduate data. To evaluate the effect of external elements on the average starting salary, a Pearson correlation coefficient matrix was constructed to detect any significant effects of university level and location. We employed multiple regression analysis to construct a prediction model, forecasting the average starting salary of graduates in 2024. Moreover, we constructed a neural network model and selected the average starting salary of graduates from 24 distinct regions and levels of universities as the training set.\n",
+    "\"\"\"\n",
+    "\n",
+    "generate_openai(\"summarize this for me in 12 words: \"+ long_text, api_key=\"\", model = \"chatgpt-4o-latest\")"
+   ]
   }
  ],
  "metadata": {
