tweak: adding ghetto markdown support

--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -938,6 +938,20 @@
     "\n",
     "ub.ls(\"hf://datatmp/test_hf_card3_pandas/data\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "debug num_proc:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
