--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using global temporary directory: /tmp/unibox_temp\n",
-      "\u001b[37m2025-02-22 20:58:19 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
+      "\u001b[37m2025-04-16 11:11:00 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
      ]
     },
     {
@@ -181,62 +181,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 20:58:23 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-04-16 11:11:19 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas_2x\u001b[0m\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b44f1f3e36804f2c9a330e83163c4099",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfa3d8eb5ede4cbc9b81e55b13849f69",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5062b2d814f74b02a65051967d43e63d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/2.33k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'datatmp/test_hf_card3_pandas_2x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# save the pandas dataframe, make sure that dataset card is properly updated\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mub\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msaves\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhf://datatmp/test_hf_card3_pandas_2x\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/local/yada/dev/unibox/src/unibox/unibox.py:96\u001b[0m, in \u001b[0;36msaves\u001b[0;34m(data, uri, debug_print, **kwargs)\u001b[0m\n\u001b[1;32m     93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo loader found for path: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00muri\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     95\u001b[0m \u001b[38;5;66;03m# Save using the loader (it will handle both dataset and file cases)\u001b[39;00m\n\u001b[0;32m---> 96\u001b[0m \u001b[43mloader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43muri\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloader_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/local/yada/dev/unibox/src/unibox/loaders/hf_dataset_loader.py:91\u001b[0m, in \u001b[0;36mHFDatasetLoader.save\u001b[0;34m(self, hf_uri, data, loader_config)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;66;03m# Convert DataFrame to Dataset if needed\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, pd\u001b[38;5;241m.\u001b[39mDataFrame):\n\u001b[1;32m     90\u001b[0m     \u001b[38;5;66;03m# readme_text = generate_dataset_readme(data, repo_id)\u001b[39;00m\n\u001b[0;32m---> 91\u001b[0m     readme_text \u001b[38;5;241m=\u001b[39m \u001b[43msummarize_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrepo_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     92\u001b[0m     data \u001b[38;5;241m=\u001b[39m Dataset\u001b[38;5;241m.\u001b[39mfrom_pandas(data)\n\u001b[1;32m     93\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, Dataset):\n",
+      "File \u001b[0;32m/local/yada/dev/unibox/src/unibox/utils/df_utils.py:228\u001b[0m, in \u001b[0;36msummarize_dataframe\u001b[0;34m(df, sample_rows, max_unique_for_freq)\u001b[0m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msummarize_dataframe\u001b[39m(df: pd\u001b[38;5;241m.\u001b[39mDataFrame, sample_rows: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m, max_unique_for_freq: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m--> 228\u001b[0m     sample_rows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msample_rows\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Ensure it's an integer\u001b[39;00m\n\u001b[1;32m    229\u001b[0m     max_unique_for_freq \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(max_unique_for_freq)\n\u001b[1;32m    231\u001b[0m     lines \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'datatmp/test_hf_card3_pandas_2x'"
+     ]
     }
    ],
    "source": [
     "# save the pandas dataframe, make sure that dataset card is properly updated\n",
-    "ub.saves(df, \"hf://datatmp/test_hf_card3_pandas\")"
+    "ub.saves(df, \"hf://datatmp/test_hf_card3_pandas_2x\")\n",
+    "\n"
    ]
   },
   {
